--- a/.github/workflows/kernel.yml
+++ b/.github/workflows/kernel.yml
@@ -1,16 +1,16 @@
-name: Create Flash Package
+name: Kernel Build and Package
 on:
   workflow_dispatch:
 
 jobs:
-  package:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
+          
       - name: Setup Build Environment
         run: |
           sudo apt-get update
@@ -20,17 +20,31 @@ jobs:
 
       - name: Final Setup Attempt
         run: |
-          function safe_write() {
-            local dir=$(dirname "$1")
-            mkdir -p "$dir" 2>/dev/null || true
-            cat > "$1"
+          # Function to safely create directory
+          safe_mkdir() {
+            if [ ! -d "$1" ]; then
+              mkdir -p "$1" || echo "WARNING: Could not create $1"
+            else
+              echo "Directory $1 exists, skipping..."
+            fi
           }
 
-          # Create directories and files
-          echo "=== Setting up build environment ==="
-          echo "Time: 2025-03-23 18:42:50"
-          echo "User: dharani-dp-33"
+          # Function to safely write file
+          safe_write() {
+            local dir=$(dirname "$1")
+            safe_mkdir "$dir"
+            if [ ! -f "$1" ] || [ -w "$1" ]; then
+              cat > "$1" || echo "WARNING: Could not write to $1"
+            else
+              echo "WARNING: Cannot write to $1"
+            fi
+          }
 
+          echo "=== Starting Setup with Current Time ==="
+          echo "Current time: 2025-03-23 18:49:24"
+          echo "Current user: dharani-dp-33"
+
+          # 1. Safely create all directories
           for dir in \
             vendor/oplus/kernel/include \
             vendor/oplus/kernel/secureguard/rootguard \
@@ -41,41 +55,94 @@ jobs:
             kernel/dfr \
             kernel/mm_osvelte \
             kernel/performance \
+            drivers/soc/oplus \
+            drivers/input/oplus \
+            drivers/misc/oplus \
+            drivers/power/oplus \
+            drivers/staging/android/oplus \
             drivers/oplus \
             include/config; do
-            mkdir -p "$dir"
+            safe_mkdir "$dir"
           done
 
-          # Version header
+          # 2. Create version header with EXACT time
           safe_write "vendor/oplus/kernel/include/oplus_version.h" << EOF
           #ifndef _OPLUS_VERSION_H_
           #define _OPLUS_VERSION_H_
           #define OPLUS_BUILD_DATE "2025-03-23"
-          #define OPLUS_BUILD_TIME "18:42:50"
+          #define OPLUS_BUILD_TIME "18:49:24"
           #define OPLUS_BUILD_USER "dharani-dp-33"
           #endif
           EOF
 
-          # Create Kconfig files
-          safe_write "kernel/sched_assist/Kconfig" << EOF
+          # 3. Create Kconfig files with error checking
+          for dir in kernel/*/; do
+            if [ -d "$dir" ]; then
+              feature=$(basename "$dir" | tr '[:lower:]' '[:upper:]' | tr '-' '_')
+              safe_write "${dir}Kconfig" << EOF
+          config OPLUS_FEATURE_${feature}
+              tristate "OPLUS ${feature} support"
+              default y
+              help
+                  OPLUS ${feature} kernel feature
+          EOF
+              safe_write "${dir}Makefile" << EOF
+          obj-\$(CONFIG_OPLUS_FEATURE_${feature}) += ${feature,,}.o
+          EOF
+            fi
+          done
+
+          # 4. Special handling for sched_assist
+          safe_write "kernel/sched_assist/Kconfig" << 'EOF'
           config OPLUS_FEATURE_SCHED_ASSIST
               def_bool y
               help
                   OPLUS SchedAssist feature
           EOF
 
-          # Other necessary files
-          safe_write "drivers/oplus/Kconfig" << EOF
+          # 5. Create core OPLUS config
+          safe_write "drivers/oplus/Kconfig" << 'EOF'
           menu "OPLUS Feature Drivers"
           config OPLUS_SYSTEM_KERNEL
               bool "OPLUS system kernel"
               default y
               help
                   OPLUS system kernel feature
+
+          source "kernel/sched_assist/Kconfig"
+          source "kernel/orms/Kconfig"
+          source "kernel/oplus_cpu/Kconfig"
+          source "kernel/healthinfo/Kconfig"
+          source "kernel/dfr/Kconfig"
+          source "kernel/mm_osvelte/Kconfig"
+          source "kernel/performance/Kconfig"
           endmenu
           EOF
 
+          # 6. Create vendor Makefiles
+          safe_write "vendor/oplus/Makefile" << 'EOF'
+          obj-y += kernel/
+          EOF
+
+          safe_write "vendor/oplus/kernel/Makefile" << 'EOF'
+          obj-y += secureguard/
+          EOF
+
+          # 7. Create base config
           touch include/config/auto.conf
+
+          echo "=== Verifying Critical Files ==="
+          for file in \
+            kernel/sched_assist/Kconfig \
+            vendor/oplus/kernel/include/oplus_version.h \
+            drivers/oplus/Kconfig; do
+            if [ -f "$file" ]; then
+              echo "✓ $file exists"
+              head -n 1 "$file"
+            else
+              echo "✗ ERROR: $file missing!"
+            fi
+          done
 
       - name: Build Kernel
         run: |
@@ -93,43 +160,16 @@ jobs:
           make O=out ARCH=$ARCH CROSS_COMPILE=$CROSS_COMPILE -j$(nproc) 2>&1 | tee build.log
 
       - name: Create Flash Package
+        if: success()
         run: |
           echo "=== Creating Flash Package ==="
           mkdir -p flash_package
           cd flash_package
           
-          # Create instructions
-          cat << 'EOF' > FLASH_INSTRUCTIONS.txt
-          X7Max/GTNeo/GTNeo2T Kernel Flashing Instructions
-          ==============================================
-          Build Date: 2025-03-23
-          Build Time: 18:42:50
-          Builder: dharani-dp-33
-
-          Prerequisites:
-          -------------
-          1. Unlocked bootloader
-          2. TWRP/Custom Recovery
-          3. USB debugging enabled
-          4. Battery > 50%
-
-          Flashing Steps:
-          --------------
-          Via Recovery:
-          1. Boot to recovery
-          2. Flash X7Max-Kernel.zip
-          3. Reboot
-
-          Via Fastboot:
-          1. Boot to fastboot
-          2. fastboot flash boot Image.gz-dtb
-          3. fastboot reboot
-          EOF
-
-          # Package kernel
+          # Copy kernel image
           cp ../out/arch/arm64/boot/Image.gz-dtb ./
           
-          # Clone AnyKernel3
+          # Create AnyKernel3 zip
           git clone https://github.com/osm0sis/AnyKernel3
           cd AnyKernel3
           sed -i 's/do.devicecheck=1/do.devicecheck=1/g' anykernel.sh
@@ -138,23 +178,40 @@ jobs:
           sed -i 's/device.name3=/device.name3=GTNeo/g' anykernel.sh
           sed -i 's/device.name4=/device.name4=GTNeo2T/g' anykernel.sh
           sed -i 's/device.name5=/device.name5=X7Max/g' anykernel.sh
-          
           cp ../Image.gz-dtb ./
           zip -r9 ../X7Max-Kernel.zip * -x .git README.md *placeholder
           cd ..
-          
+
+          # Create instructions
+          cat > FLASH_INSTRUCTIONS.txt << 'EOF'
+          X7Max/GTNeo/GTNeo2T Kernel
+          ========================
+          Build: 2025-03-23 18:49:24
+          Builder: dharani-dp-33
+
+          How to Flash:
+          1. Via Recovery:
+             - Flash X7Max-Kernel.zip
+             - Reboot
+
+          2. Via Fastboot:
+             - fastboot flash boot Image.gz-dtb
+             - fastboot reboot
+          EOF
+
           # Create checksums
           sha256sum Image.gz-dtb X7Max-Kernel.zip > SHA256SUMS.txt
-          
-          # Final package
-          zip -r ../X7Max-Kernel-Full.zip * -x "*.git*" "*placeholder*"
 
-      - name: Upload Flash Package
+          # Package everything
+          cd ..
+          zip -r X7Max-Kernel-Full.zip flash_package/* -x "*.git*"
+
+      - name: Upload Package
         uses: actions/upload-artifact@v4
         with:
-          name: X7Max-Kernel-Flash-Package-NEW
+          name: X7Max-Kernel-Package
           path: |
-            flash_package/X7Max-Kernel-Full.zip
+            X7Max-Kernel-Full.zip
             flash_package/SHA256SUMS.txt
             flash_package/FLASH_INSTRUCTIONS.txt
           if-no-files-found: error
